--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <!-- First Meeting Section -->
     <section id="firstMeeting" class="section" style="display:none;">
-        <img src="our_first_meeting.jpg" alt="First Meeting">
+        <img src="firstmeeting.jpeg" alt="First Meeting">
         <p>The moment we met...</p>
         <button onclick="nextSection('firstMeeting', 'firstAdventure')">Next</button>
     </section>
