--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <!-- First Adventure Section -->
     <section id="firstAdventure" class="section" style="display:none;">
-        <img src="our_first_adventure.jpg" alt="Our First Adventure">
+        <img src="secongmeeting.jpeg" alt="Our First Adventure">
         <p>The start of countless adventures...</p>
         <button onclick="nextSection('firstAdventure', 'favoriteMemory')">Next</button>
     </section>
@@ -33,7 +33,7 @@
     <section id="favoriteMemory" class="section" style="display:none;">
         <div class="photo-collage">
             <img src="fav_moment.jpg" alt="Memory 1">
-            <img src="fav_moment2.jpg" alt="Memory 2">
+            <img src="thirdmeeting.jpeg" alt="Memory 2">
             <img src="fav_moment3.jpg" alt="Memory 3">
         </div>
         <p>Every moment with you feels like my favorite. But these ones stands out...</p>
