--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
 
     <!-- First Meeting Section -->
     <section id="firstMeeting" class="section" style="display:none;">
-        <img src="firstmeeting" alt="First Meeting">
+        <img src="firstmeeting.jpg" alt="First Meeting">
         <p>The moment we met...</p>
         <button onclick="nextSection('firstMeeting', 'firstAdventure')">Next</button>
     </section>
 
     <!-- First Adventure Section -->
     <section id="firstAdventure" class="section" style="display:none;">
-        <img src="secongmeeting" alt="Our First Adventure">
+        <img src="secongmeeting.jpg" alt="Our First Adventure">
         <p>The start of countless adventures...</p>
         <button onclick="nextSection('firstAdventure', 'favoriteMemory')">Next</button>
     </section>
