--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <!-- First Adventure Section -->
     <section id="firstAdventure" class="section" style="display:none;">
-        <img src="secongmeeting.jpg" alt="Our First Adventure">
+        <img src="secondmeeting.jpg" alt="Our First Adventure">
         <p>The start of countless adventures...</p>
         <button onclick="nextSection('firstAdventure', 'favoriteMemory')">Next</button>
     </section>
